
v1.9.0 (unreleased)
-------------------

Changed
~~~~~~~

- The `qute-pass` userscript now has a new `--extra-url-suffixes` (`-s`)
  argument which passes extra URL suffixes to the tldextract library.
- A stack is now used for `:tab-focus last` rather than just saving one tab.
  Additionally, `:tab-focus` now understands `stack-prev` and `stack-next`
  arguments to traverse that stack.

Fixed
~~~~~

- dictcli.py now works correctly on Windows again.
- Unbinding keys via `config.bind(key, None)` accidentally worked in
  v1.7.0 but raises an exception in v1.8.0. It now works again, but is
  deprecated and shows an error. Note that `:config-py-write` did write
  such invalid lines before v1.8.0, so existing config files might need
  adjustments.
- The `readability-js` userscript now handles encodings correctly (which it
  didn't before for some websites).
- New `tabs.tooltips` setting which can be used to disable hover tooltips for
  tabs.
- <Shift-Insert> can now be used to paste text starting with a hyphen.
- Following hints via the number keypad now works properly again.
- The logic for `:restart` has been revisited which should fix issues with
  relative basedirs.
- Errors while reading the state file are now displayed instead of causing a
  crash.
- Crash when using `:debug-log-level` without a console attached.
- Downloads are now hidden properly when the browser is in fullscreen mode.

v1.8.1 (2019-09-27)
-------------------

Changed
~~~~~~~

- No code changes - this release only repackages the Windows/macOS
  releases due to issues with the v1.8.0 release.
- Updated dependencies for Windows/macOS releases:
  * macOS and Windows releases now ship with Qt/QtWebEngine 5.12.5. Those
    are based on Chromium 69.0.3497.128 with security fixes up to Chromium
    76.0.3809.87.
  * Qt 5.13 couldn't be used yet due to various bugs in Qt 5.13.0 and .1.

v1.8.0 (2019-09-25)
-------------------

Added
~~~~~

- New userscripts: