@@ -626,6 +626,7 @@ Start hinting.
  - `tab-bg`: Open the link in a new background tab.
  - `window`: Open the link in a new window.
  - `hover` : Hover over the link.
+ - `right-click`: Right-click the element.
  - `yank`: Yank the link to the clipboard.
  - `yank-primary`: Yank the link to the primary selection.
  - `run`: Run the argument as command.
